# Pent

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml  verify-apt.yml
.halt/: halt.toml
.pent/: pent.toml
apt/: InRelease  KEY.gpg  Packages  Release  Release.gpg  index.html  pent_0.0.1_amd64.deb  pent_0.0.1_arm64.deb  pent_0.0.2_amd64.deb  pent_0.0.2_arm64.deb  pent_0.0.3_amd64.deb  pent_0.0.3_arm64.deb  pent_0.0.4_amd64.deb  pent_0.0.4_arm64.deb  pent_0.0.5_amd64.deb  pent_0.0.5_arm64.deb
crates/halt/: Cargo.toml
crates/halt-proxy/: Cargo.toml
crates/halt-proxy/src/: dns.rs  lib.rs  server.rs
crates/halt-sandbox/src/: config.rs  env.rs  lib.rs  linux.rs  linux_netns.rs  linux_overlayfs.rs  macos.rs
crates/halt-settings/src/: lib.rs  loader.rs  profiles.rs
crates/halt/src/: cli.rs  main.rs  ui.rs
crates/halt/src/commands/: check.rs  config.rs  run.rs
crates/halt/tests/: e2e_linux.rs  e2e_macos.rs  integration_test.rs
crates/pent/: Cargo.toml  build.rs
crates/pent-proxy/: Cargo.toml
crates/pent-proxy/src/: dns.rs  filter.rs  lib.rs  proxy.rs  server.rs
crates/pent-sandbox/: Cargo.toml
crates/pent-sandbox/src/: config.rs  env.rs  lib.rs  linux.rs  linux_netns.rs  linux_overlayfs.rs  macos.rs
crates/pent-settings/: Cargo.toml
crates/pent-settings/src/: lib.rs  loader.rs  profiles.rs
crates/pent/src/: cli.rs  error.rs  main.rs  ui.rs
crates/pent/src/commands/: check.rs  config.rs  mod.rs  run.rs
crates/pent/tests/: e2e_linux.rs  e2e_macos.rs  integration_test.rs
e2e/: Dockerfile  test-linux-agents.sh  test-macos-agents.sh
packaging/aur/: PKGBUILD  halt.install  pent.install
