[workspace]
members = ["crates/pent", "crates/pent-proxy", "crates/pent-sandbox", "crates/pent-settings"]
resolver = "2"

[workspace.package]
version = "0.0.5"
edition = "2021"
authors = ["Valentin Radu"]
license = "MIT"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic       = "deny"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["net", "time", "io-util", "rt-multi-thread", "macros", "sync"] }
tracing = "0.1"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
