[package]
name = "halt-proxy"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "DNS + TCP proxy with domain allowlist enforcement for halt sandbox"

[dependencies]
halt-settings = { path = "../halt-settings" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
