[package]
name = "pent-proxy"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "DNS + TCP proxy with domain allowlist enforcement for pent sandbox"

[dependencies]
pent-settings = { path = "../pent-settings" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
