[package]
name = "pent-sandbox"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "OS-level process sandboxing (filesystem + network containment)"

[dependencies]
pent-settings = { path = "../pent-settings" }
thiserror = { workspace = true }
dirs = "5"
libc = "0.2"


[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[dev-dependencies]
serial_test = "3"
tempfile = { workspace = true }
