[package]
name = "pent"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Run processes under filesystem and network containment"

[[bin]]
name = "pent"
path = "src/main.rs"

[dependencies]
pent-settings = { path = "../pent-settings" }
pent-sandbox  = { path = "../pent-sandbox" }
pent-proxy    = { path = "../pent-proxy" }
clap          = { workspace = true }
console       = "0.15"
tokio         = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror     = { workspace = true }
serde_json    = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
clap_mangen = "0.2"
clap        = { workspace = true, features = ["string"] }

[dev-dependencies]
tempfile    = { workspace = true }
toml        = "0.8"
serial_test = "3"

[package.metadata.deb]
name = "pent"
maintainer = "Valentin Radu"
copyright = "2024, Valentin Radu"
license-file = ["../../LICENSE", "4"]
extended-description = """\
Wrap any process in a filesystem and network sandbox using native OS \
mechanisms (Linux Landlock + network namespaces) with a built-in \
DNS/TCP proxy for domain allowlisting."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/pent", "usr/bin/", "755"],
    ["../../man/pent.1",            "usr/share/man/man1/", "644"],
    ["../../man/pent-run.1",        "usr/share/man/man1/", "644"],
    ["../../man/pent-check.1",      "usr/share/man/man1/", "644"],
    ["../../man/pent-config.1",     "usr/share/man/man1/", "644"],
    ["../../man/pent-config-add.1", "usr/share/man/man1/", "644"],
    ["../../man/pent-config-edit.1","usr/share/man/man1/", "644"],
    ["../../man/pent-config-init.1","usr/share/man/man1/", "644"],
    ["../../man/pent-config-rm.1",  "usr/share/man/man1/", "644"],
    ["../../man/pent-config-show.1","usr/share/man/man1/", "644"],
]

[lints]
workspace = true
